# euclid

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  euclid.hpp  main.cpp
src/utils/: color.cpp  color.hpp  logging.cpp  logging.hpp  opengl_render.cpp  render.hpp
src/utils/events/: events.hpp
